[tool.poetry]
name = "repl_python3_beta_IPv4-Networking-Tool"
version = "0.1.0"
description = ""
authors = ["DarkHelmet28 <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
termcolor = "^1.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
